--- a/webapp/app/views/main.scala.html
+++ b/webapp/app/views/main.scala.html
@@ -7,7 +7,9 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-1.10.2.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/underscore-1.5.2.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/backbone-1.0.0.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
