--- a/webapp/app/views/main.scala.html
+++ b/webapp/app/views/main.scala.html
@@ -1,15 +1,17 @@
 @(title: String)(content: Html)
+@{/* This template renders the basics of the HTML page for all pages in the applciation. */}
+@{/* title: The title for the page. */}
+@{/* content: The contents of the body tag. */}
 
 <!DOCTYPE html>
 
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        @{/* Import the css for the page. */}
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/vendor/jquery-1.10.2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/vendor/underscore-1.5.2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/vendor/backbone-1.0.0.js")" type="text/javascript"></script>
+        @{/* Import all the js using the require.js bootstrap script in. */}
+        @helper.requireJs(core = routes.Assets.at("javascripts/require.js").url, module = routes.Assets.at("javascripts/main").url)
     </head>
     <body>
         @content
